# rust-rocket-memo

./: Cargo.toml  Rocket.toml
src/: main.rs
src/memo/: controller.rs  mod.rs  model.rs  route.rs  urls.rs
src/utils/: response.rs
