[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["stardustrain <kthanterran@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
log = "0.4.10"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
rocket_contrib = { version = "0.4.2", features = ["json"] }
chrono = { version = "0.4", features = ['serde'] }
